[gd_scene load_steps=27 format=3 uid="uid://kpmlor52ly0"]

[ext_resource type="Script" path="res://GameTwo/scripts/scene12.gd" id="1_3v4lc"]
[ext_resource type="Texture2D" uid="uid://djjie4fvlti3e" path="res://assets/scene12/white.png" id="1_5hf1s"]
[ext_resource type="Texture2D" uid="uid://b1174vta4ct08" path="res://assets/scene10/TextBox1.png" id="3_fvmob"]
[ext_resource type="Texture2D" uid="uid://cyv5s1bl4nkgw" path="res://assets/scene12/TextBox1.png" id="5_6w5i2"]
[ext_resource type="Texture2D" uid="uid://b3i7a77v3weeu" path="res://assets/scene10/textBoxBlueDesign.png" id="5_t0snj"]
[ext_resource type="Texture2D" uid="uid://dyclyufpercc0" path="res://assets/scene10/whiteTextBox.png" id="6_7jo0h"]
[ext_resource type="Texture2D" uid="uid://c52uj8dmbak6j" path="res://assets/scene12/textBoxBlueDesign.png" id="7_y58ec"]
[ext_resource type="FontFile" uid="uid://0q7lokh17m18" path="res://assets/Fonts/VarelaRound-Regular/VarelaRound-Regular.ttf" id="8_c8kre"]
[ext_resource type="Texture2D" uid="uid://c5bofss8umg2g" path="res://assets/scene10/DrawingBoard.png" id="8_pvbv1"]
[ext_resource type="Texture2D" uid="uid://cpst5lklwvyyi" path="res://assets/scene12/shellBubble.png" id="9_4a1ix"]
[ext_resource type="Texture2D" uid="uid://bqiuq6nsp786d" path="res://assets/scene12/shell.png" id="10_t41a2"]
[ext_resource type="Texture2D" uid="uid://du33ninhslthq" path="res://assets/scene10/ColorBoard.png" id="15_x5yvm"]
[ext_resource type="Texture2D" uid="uid://bnp3qxtkhlehf" path="res://assets/scene10/purple_color.png" id="16_v20oy"]
[ext_resource type="Texture2D" uid="uid://kl762yrnh42t" path="res://assets/scene10/blue_color.png" id="17_iqmtk"]
[ext_resource type="Texture2D" uid="uid://bw8khkborecng" path="res://assets/scene10/yellow_color.png" id="18_1o7yr"]
[ext_resource type="Texture2D" uid="uid://bvvjixxgl37c6" path="res://assets/scene10/pink_color.png" id="19_tvuyp"]
[ext_resource type="Texture2D" uid="uid://kluaoga2gbqx" path="res://assets/scene12/uncoloredJellyFish.png" id="19_x3a8b"]
[ext_resource type="Texture2D" uid="uid://pdwy3stug1e0" path="res://assets/scene10/green_color.png" id="20_5xnb3"]
[ext_resource type="Texture2D" uid="uid://btirmj50fmype" path="res://assets/scene12/greenHalfJellyFish.png" id="20_owe2s"]
[ext_resource type="Texture2D" uid="uid://c115yfkjj01m5" path="res://assets/scene12/orangeHalfJellyFish.png" id="21_l1toj"]
[ext_resource type="Texture2D" uid="uid://ivn0c8poh4" path="res://assets/scene10/red_color.png" id="21_xuhp7"]
[ext_resource type="Texture2D" uid="uid://bnit5kxcj03y2" path="res://assets/scene10/back_button.png" id="22_4pkmt"]
[ext_resource type="Texture2D" uid="uid://bll52ovyxy2yu" path="res://assets/scene10/orange_color.png" id="22_tl68m"]
[ext_resource type="Texture2D" uid="uid://e1sdpaiuuu6i" path="res://assets/scene12/readyButton.png" id="23_8kbge"]

[sub_resource type="Animation" id="Animation_1xbvi"]
resource_name = "ShellAnimation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shovelAnimation/Shovel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.566666, 0.481482), Vector2(0.766467, 0.758961), Vector2(0.566666, 0.481482)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xq22"]
_data = {
"ShellAnimation": SubResource("Animation_1xbvi")
}

[node name="scene12" type="Node2D"]
script = ExtResource("1_3v4lc")

[node name="White" type="Sprite2D" parent="."]
position = Vector2(601.25, 332.75)
scale = Vector2(2.18211, 2.02403)
texture = ExtResource("1_5hf1s")

[node name="TextBox1" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(855, 435.063)
scale = Vector2(0.15036, 0.15583)
texture = ExtResource("3_fvmob")

[node name="TextBox2" type="Sprite2D" parent="."]
position = Vector2(854.375, 133.344)
scale = Vector2(0.150285, 0.0859122)
texture = ExtResource("3_fvmob")

[node name="TextBoxBlueDesign" type="Sprite2D" parent="."]
position = Vector2(853.5, 317.25)
scale = Vector2(0.134238, 0.137658)
texture = ExtResource("7_y58ec")

[node name="TextBoxBlueDesign2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(853.5, 317.25)
scale = Vector2(0.134238, 0.137658)
texture = ExtResource("5_t0snj")

[node name="WhiteTextBox2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(853, 473)
scale = Vector2(0.150462, 0.167852)
texture = ExtResource("6_7jo0h")

[node name="JellyFishLabel" type="RichTextLabel" parent="."]
offset_left = 786.0
offset_top = 304.0
offset_right = 921.0
offset_bottom = 333.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 18
text = "jellyfish brother"

[node name="Procedure" type="RichTextLabel" parent="."]
offset_left = 627.0
offset_top = 375.0
offset_right = 946.0
offset_bottom = 400.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Procedure"

[node name="codeText" type="RichTextLabel" parent="."]
offset_left = 651.0
offset_top = 412.0
offset_right = 1076.0
offset_bottom = 505.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
text = "brother = { ’red’,’pink’,’yellow’,’blue’,’purple’,’green’,
                     ’orange’}
Brother1 = list(brother)
print(list[5:6])
"

[node name="instructionText" type="RichTextLabel" parent="."]
offset_left = 727.0
offset_top = 532.0
offset_right = 989.0
offset_bottom = 578.0
theme_override_colors/default_color = Color(0.152941, 0.317647, 0.670588, 1)
theme_override_font_sizes/normal_font_size = 12
text = "If you don't know the answer, click on this shell and it will prompt you!
"

[node name="ShellBubble" type="Sprite2D" parent="."]
position = Vector2(1019.75, 551.5)
scale = Vector2(0.424312, 0.412088)
texture = ExtResource("9_4a1ix")

[node name="description" type="RichTextLabel" parent="."]
offset_left = 630.0
offset_top = 69.0
offset_right = 1077.0
offset_bottom = 206.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 18
text = "Recalling the accessing operation of the dict, what is the output result of the above program? Based on the results, pick up a paintbrush and dip it in the correct paint to help the jellyfish  sister paint the colors!
"

[node name="DrawingBoard" type="Sprite2D" parent="."]
position = Vector2(307, 325)
scale = Vector2(0.69469, 0.604126)
texture = ExtResource("8_pvbv1")

[node name="UncoloredJellyFish" type="Sprite2D" parent="."]
position = Vector2(306.5, 267.5)
scale = Vector2(1.09551, 1.02711)
texture = ExtResource("19_x3a8b")

[node name="GreenHalfJellyFish" type="Sprite2D" parent="."]
visible = false
position = Vector2(257.5, 267)
scale = Vector2(1.125, 1.03614)
texture = ExtResource("20_owe2s")

[node name="OrangeHalfJellyFish" type="Sprite2D" parent="."]
visible = false
position = Vector2(355, 267.5)
scale = Vector2(1.11364, 1.03916)
texture = ExtResource("21_l1toj")

[node name="shellAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xq22")
}

[node name="Shell" type="Sprite2D" parent="shellAnimation"]
position = Vector2(1022.01, 550.508)
scale = Vector2(0.566666, 0.481482)
texture = ExtResource("10_t41a2")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 999.0
offset_top = 526.0
offset_right = 1051.0
offset_bottom = 575.0

[node name="helpDialogBox" type="Sprite2D" parent="."]
visible = false
position = Vector2(538, 317)
scale = Vector2(0.169268, 0.191817)
texture = ExtResource("5_6w5i2")

[node name="White2" type="Sprite2D" parent="helpDialogBox"]
position = Vector2(-3.69238, 29.3249)
scale = Vector2(4.17614, 4.63768)
texture = ExtResource("1_5hf1s")

[node name="RichTextLabel" type="RichTextLabel" parent="helpDialogBox/White2"]
offset_left = -371.0
offset_top = -135.429
offset_right = 370.0
offset_bottom = 97.5711
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 25
text = "The list elements are indexed. To access a section of list, we can use the syntax: 	list[a:b] 
This refers to the elements within the list at index 'a' to 'b'

For Example: 
List Fruits  = { 'Apple', 'Banana', 'Cherry', 'Dates', 'Elderberry' }
Fruits[2:4] = {'Cherry', 'Dates', 'Elderberry'}"

[node name="titleText" type="RichTextLabel" parent="helpDialogBox/White2"]
offset_left = -143.096
offset_top = -200.124
offset_right = 136.904
offset_bottom = -149.124
theme_override_colors/default_color = Color(0.376471, 0.670588, 0.843137, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 37
text = "Hint of the day! "

[node name="helpDialogButton" type="TextureButton" parent="helpDialogBox/White2"]
offset_left = -153.313
offset_top = 113.957
offset_right = 123.687
offset_bottom = 175.957
texture_normal = ExtResource("23_8kbge")
ignore_texture_size = true
stretch_mode = 0

[node name="errorDialogBox" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(538, 226.062)
scale = Vector2(0.169268, 0.107499)
texture = ExtResource("5_6w5i2")

[node name="White2" type="Sprite2D" parent="errorDialogBox"]
position = Vector2(-0.738485, 28.6406)
scale = Vector2(4.22936, 4.59198)
texture = ExtResource("1_5hf1s")

[node name="RichTextLabel" type="RichTextLabel" parent="errorDialogBox/White2"]
offset_left = -206.56
offset_top = -194.763
offset_right = 198.44
offset_bottom = -121.763
theme_override_colors/default_color = Color(0.309804, 0.701961, 0.945098, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 50
text = "Wrong Selection"

[node name="explanation" type="RichTextLabel" parent="errorDialogBox/White2"]
offset_left = -372.587
offset_top = -115.665
offset_right = 368.413
offset_bottom = 74.3354
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_c8kre")
theme_override_font_sizes/normal_font_size = 28
text = "The selected color is not the right choice. You have to select the printed colors in right order. 

First select the color with lowest index and proceed sequentially"

[node name="closeDialogButton" type="TextureButton" parent="errorDialogBox/White2"]
offset_left = -163.257
offset_top = 92.9005
offset_right = 150.743
offset_bottom = 183.901
texture_normal = ExtResource("23_8kbge")
ignore_texture_size = true
stretch_mode = 0

[node name="ColorBoard" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(43, 331)
scale = Vector2(0.128876, 0.188753)
texture = ExtResource("15_x5yvm")

[node name="purpleButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 365.0
offset_right = 93.0
offset_bottom = 412.0
texture_normal = ExtResource("16_v20oy")
ignore_texture_size = true
stretch_mode = 0

[node name="blueButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 310.0
offset_right = 93.0
offset_bottom = 357.0
texture_normal = ExtResource("17_iqmtk")
ignore_texture_size = true
stretch_mode = 0

[node name="yellowButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 255.0
offset_right = 93.0
offset_bottom = 302.0
texture_normal = ExtResource("18_1o7yr")
ignore_texture_size = true
stretch_mode = 0

[node name="pinkButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 200.0
offset_right = 93.0
offset_bottom = 247.0
texture_normal = ExtResource("19_tvuyp")
ignore_texture_size = true
stretch_mode = 0

[node name="greenButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 420.0
offset_right = 93.0
offset_bottom = 467.0
texture_normal = ExtResource("20_5xnb3")
ignore_texture_size = true
stretch_mode = 0

[node name="redButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 145.0
offset_right = 93.0
offset_bottom = 192.0
texture_normal = ExtResource("21_xuhp7")
ignore_texture_size = true
stretch_mode = 0

[node name="orangeButton" type="TextureButton" parent="."]
offset_left = 18.0
offset_top = 475.0
offset_right = 93.0
offset_bottom = 522.0
texture_normal = ExtResource("22_tl68m")
ignore_texture_size = true
stretch_mode = 0

[node name="backButton" type="TextureButton" parent="."]
visible = false
offset_left = 22.0
offset_top = 30.0
offset_right = 73.0
offset_bottom = 80.0
texture_normal = ExtResource("22_4pkmt")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="helpDialogBox/White2/helpDialogButton" to="." method="_on_help_dialog_button_pressed"]
[connection signal="pressed" from="errorDialogBox/White2/closeDialogButton" to="." method="_on_close_dialog_button_pressed"]
[connection signal="pressed" from="purpleButton" to="." method="_on_purple_button_pressed"]
[connection signal="pressed" from="blueButton" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="yellowButton" to="." method="_on_yellow_button_pressed"]
[connection signal="pressed" from="pinkButton" to="." method="_on_pink_button_pressed"]
[connection signal="pressed" from="greenButton" to="." method="_on_green_button_pressed"]
[connection signal="pressed" from="redButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="orangeButton" to="." method="_on_orange_button_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
